--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,11 +21,13 @@
     "prisma": "npx prisma generate && npx prisma db push --accept-data-loss"
   },
   "dependencies": {
+    "@levminer/speakeasy": "^1.4.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "11.0.0",
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -34,6 +36,7 @@
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
