documenting auth and basic routes

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/swagger": "11.0.0",
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -35,7 +34,9 @@
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
+    "default": "^0.1.1",
     "google-auth-library": "^10.3.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
@@ -48,8 +49,10 @@
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
+    "@nestjs/swagger": "11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.7",
@@ -60,6 +63,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "plugin": "link:@nestjs/swagger/plugin",
     "prettier": "^3.4.2",
     "prisma": "^6.16.2",
     "source-map-support": "^0.5.21",
