logs logic completed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
@@ -38,6 +39,7 @@
     "google-auth-library": "^10.3.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.0",
     "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
