--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^6.16.2",
+    "@nestjs/throttler": "^6.4.0",
+    "@prisma/client": "^6.17.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -70,6 +72,7 @@
     "prisma": "^6.16.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "throttler": "link:@types/nestjs/throttler",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
